# gemm_test

./: .gitignore  CMakeLists.txt
src/: gemm_test_cpu_mpi.cpp  gemm_test_metal_mpi.mm  gemm_test_mpi.cu  gemm_test_mpi_sm.cu
